# c2sagent

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  README_CN.md  README_zh.md  enhanced_server_tool_db.json  main.py  main_a2a.py  main_mcp.py  pyproject.toml  start_services.sh  test_postgresql.py  test_predict.py
api/: __init__.py  dependencies.py
api/apps/: app_mcp_client.py
api/media/: bilibili.py
api/utils/: api_utils.py  pydantic_v2.py
conf/: supervisord.conf
core/: config.py
core/db/: base.py  base_mongo.py  base_redis.py  base_sync.py  database.py
core/llm/: llm_client.py
core/oss/: base_oss.py
core/prompt/: system_prompt.jinja  timeseries_param_extract.jinja
core/timeseries/: time_gpt.py
docker/: .dockerignore  Dockerfile  docker-compose.yml  nginx.conf
docker/conf.d/: supervisord.conf
docker/mongo-init.js/: mongo-init.js
docker/postgresql-init/: init.sql
examples/: main_a2a.py  main_mcp.py
model/: model_agent.py  model_timeseries.py
model/api_model/: model_auth.py  model_create_agent.py  model_create_mcp.py  model_tool.py
service/llm/: volcano.py
service/media/: bilibili.py
service/multimodel/: video.py
sql/: manager_agent.sql  manager_user.sql
src_a2a/a2a_client/: __main__.py  agent.py  remote_agent_connection.py
src_a2a/a2a_server/: __init__.py  __main__.py  agent.py  agent_executor.py  mcp_manager.py
src_mcp/mcp_client/: __init__.py  configs_server.json  dependencies.py  mcp_client.py
src_mcp/mcp_server/: manager_server_tool.py  manager_tool.py  mcp_server_life.py
test/: test_ask_agent.py  test_manager_agent.py  test_paddle_ORC.py  test_postgresql.py  test_register.py
vue-frontend/: Dockerfile  docker-compose.yml  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
vue-frontend/docs/: index.md  (+1 more)
web/: .gitignore  api.c2sagent.com_nginx.tar  docker-compose.yml  package.json  tsconfig.app.json
(+87 files in other folders)
